tests/ui/fail/context-type-conflicting-03.stderr
error: encountered conflicting Context types in #[union_fn] trait
 --> tests/ui/fail/context-type-conflicting-03.rs:9:5
  |
9 |     type Context = i64;
  |     ^^^^^^^^^^^^^^^^^^^

error: previous Context definition here
 --> tests/ui/fail/context-type-conflicting-03.rs:5:5
  |
5 |     type Context = i32;
  |     ^^^^^^^^^^^^^^^^^^^
